--- a/angular.json
+++ b/angular.json
@@ -95,7 +95,9 @@
               "@angular/material/prebuilt-themes/cyan-orange.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node -r dotenv/config ./scripts/set-env.js"
+            ]
           }
         }
       }
