--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "npm run preserve && ng serve",
+    "prestart": "node -r dotenv/config ./scripts/set-env.js",
+    "preserve": "node -r dotenv/config ./scripts/set-env.js",
+    "prebuild": "node -r dotenv/config ./scripts/set-env.js",
+    "serve": "npm run preserve && ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:Yummi": "node dist/yummi/server/server.mjs"
+    "serve:ssr:Yummi": "node dist/yummi/server/server.mjs",
+    "postinstall": "npm run preserve"
   },
   "private": true,
   "dependencies": {
