--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.0",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
